<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appname">Luggage Manager</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="appbar_scrolling_view_behavior">1</string>
    <string name="prompt_password">2</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="imageof">imageof</string>
    <string name="text">Text</string>


    <string name="login_text">LOGIN</string>

    <string name="register_text">REGISTER</string>

    <string name="login_reg_btn_text">Register a new Account</string>

    <string name="reg_btn_text">Create an Account</string>

    <string name="reg_login_text">Already have Account? Log in</string>


    <string name="login_btn_text">sign in</string>


    <string name="email_hint">Your Email</string>

    <string name="password_hint">Password</string>

    <string name="confirm_password_hint">Confirm Password</string>


    <string name="action_logout_text">Logout</string>


    <string name="home">Home</string>

    <string name="dashboard">DashBoard</string>

    <string name="profile">Profile</string>
    <string name="imagepic">imagepic</string>
    <string name="title_activity_qrgeneration">QRgeneration</string>
    <string name="next">Next</string>
    <string name="previous_trips">Previous Trips</string>
</resources>