<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    xmlns:tools="http://schemas.android.com/tools"

    android:gravity="center_vertical"

    tools:context=".LoginActivity">


    <ImageView

        android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:background="@drawable/travel"

        android:scaleType="centerInside" />



    <RelativeLayout

        android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:padding="20dp"

        android:layout_marginTop="20dp">



        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:orientation="vertical">



            <ProgressBar

                android:id="@+id/login_progress"

                style="?android:attr/progressBarStyleHorizontal"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:indeterminate="true"

                android:visibility="invisible"/>



            <LinearLayout

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:orientation="vertical">


                <ImageView

                    android:layout_width="100dp"

                    android:layout_height="100dp"

                    android:layout_gravity="center"

                    android:src="@drawable/profile" />


                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:layout_marginBottom="8dp"

                    android:text="@string/appname"

                    android:textColor="@color/colorBlack"

                    android:textSize="25sp"

                    android:textStyle="bold" />


                <EditText

                    android:id="@+id/login_email"

                    android:layout_width="match_parent"

                    android:layout_height="45dp"

                    android:layout_marginBottom="10dp"

                    android:background="@drawable/edt_field_outline"

                    android:drawableRight="@drawable/ic_email_white_24dp"

                    android:hint="@string/email_hint"

                    android:inputType="textEmailAddress"

                    android:textColor="@color/colorBlack"

                    android:textColorHint="@color/colorBlack" />


                <EditText

                    android:id="@+id/login_password"

                    android:layout_width="match_parent"

                    android:layout_height="45dp"

                    android:layout_marginBottom="10dp"

                    android:background="@drawable/edt_field_outline"

                    android:drawableRight="@drawable/ic_lock_outline_white_24dp"

                    android:hint="@string/password_hint"

                    android:inputType="textPassword"

                    android:text=""

                    android:textColor="@color/colorBlack"

                    android:textColorHint="@color/colorBlack" />



                <Button

                    android:id="@+id/login_btn"

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:textColor="@color/colorWhite"

                    android:text="@string/login_btn_text"

                    android:background="@drawable/reg_button_outline"/>


                <Button

                    android:id="@+id/reg_btn"

                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:layout_marginTop="35dp"

                    android:layout_marginBottom="8dp"

                    android:background="@drawable/login_button_outline"

                    android:paddingTop="20dp"

                    android:paddingBottom="20dp"

                    android:text="@string/login_reg_btn_text"

                    android:textAllCaps="false"

                    android:textColor="@color/colorBlack"

                    android:textSize="18sp" />



            </LinearLayout>



        </LinearLayout>



    </RelativeLayout>



</RelativeLayout>